<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context="ru.volodya.apps.osmapplication.ObjectsActivity"
        android:id="@+id/activity_objects"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="60dp"
            android:id="@+id/actionBar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonBack"
                android:src="@mipmap/ic_back_arrow"
                tools:ignore="ContentDescription"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter" android:scaleX="0.8" android:scaleY="0.8"/>
        <TextView
                android:layout_toRightOf="@+id/buttonBack"
                android:textColor="#FFFFFF"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvRouteInfo"
                android:textAllCaps="false"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/route"
                android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
        <LinearLayout
                android:id="@+id/llFromTo"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp">
            <TextView
                    android:text="@string/From"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            <TextView
                    android:text="@string/To"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
        </LinearLayout>
        <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageView3"
                android:src="@mipmap/ic_switch_arrow"/>
        <LinearLayout
                android:id="@+id/llGpsFromTo"
                android:orientation="vertical"
                android:layout_toLeftOf="@id/imageView3"
                android:layout_toStartOf="@id/imageView3"
                android:layout_width="35dp"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@mipmap/ic_gps_aim"
                    android:layout_weight="1"
                    android:scaleType="centerInside"/>
            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_point_target"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/llFromTo"
                android:layout_toEndOf="@id/llFromTo"
                android:layout_toLeftOf="@+id/llGpsFromTo"
                android:layout_toStartOf="@+id/llGpsFromTo">
            <EditText
                    android:minHeight="18dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:id="@+id/editText"
                    android:layout_weight="1"/>
            <EditText
                    android:minHeight="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/editText2"
                    android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
            android:text="@string/route_objects_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textStyle="normal|bold"
            android:layout_weight="1"/>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="25">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llMatchedObjects"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/llGas">
                <ImageView
                        android:id="@+id/imageView4"
                        android:src="@mipmap/ic_gas"
                        android:layout_gravity="center_vertical"
                        android:layout_height="60dp"
                        android:layout_width="0dp"

                        android:layout_weight="2"/>
                <TextView
                        android:text="Автозаправочные станции"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        android:textSize="16sp"
                        android:layout_weight="9"
                        android:gravity="center_vertical"
                        tools:ignore="HardcodedText"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/checkBoxGas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/imageView5"
                        android:src="@mipmap/ic_camp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="2"/>
                <TextView
                        android:text="@string/camps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textSize="16sp"
                        android:layout_weight="9"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"/>
                <CheckBox
                        android:id="@+id/checkBoxCamp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="end|center"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/imageView6"
                        android:src="@mipmap/ic_tech_service"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="60dp"/>
                <TextView
                        android:text="@string/tech_service"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:layout_weight="9"
                        android:layout_gravity="center_vertical" android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/checkBoxTech"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center" android:checked="true"
                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/imageView7"
                        android:src="@mipmap/ic_weight_station"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="60dp"/>
                <TextView
                        android:text="@string/weight_station"
                        android:layout_marginLeft="10dp"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_weight="9"
                        android:layout_gravity="center_vertical"/>
                <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/checkBoxWeight"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/imageView8"
                        android:src="@mipmap/ic_auto_parts"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="60dp"/>
                <TextView
                        android:text="@string/auto_parts"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:id="@+id/textView8"
                        android:layout_gravity="center_vertical"/>
                <CheckBox
                        android:id="@+id/checkBoxParts"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/imageView9"
                        android:src="@mipmap/ic_atm"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="60dp"/>
                <TextView
                        android:id="@+id/textView9"
                        android:text="@string/ATM"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:layout_gravity="center_vertical"/>
                <CheckBox
                        android:id="@+id/checkBoxAtm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>